save new scripts

--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
       </div>
       <div>
         <ul>
+            <li>
+                <div class = "script">
+                    <span id="foo">docker run ubuntu1</span>
+                    <button data-clipboard-target="#foo" class = "btn align-right">Copy</button>
+                </div>
+                <div class="description">command to execute a ubuntu container</div>
+            </li>
         <ul>
     </div>
 </body>
