--- a/templateLI.html
+++ b/templateLI.html
@@ -1,7 +1,7 @@
 <!--li-->
     <div class = "script">
-      <span id="SCRIPT_ID">SCRIPT_CODE</span>
-      <button data-clipboard-target="#SCRIPT_ID" class = "btn align-right">Copy</button>
+      <span id="_SCRIPT_ID">SCRIPT_CODE</span>
+      <button data-clipboard-target="#_SCRIPT_ID" class = "btn align-right">Copy</button>
     </div>
     <div class="description">SCRIPT_DESCRIPTION</div>
 <!--/li-->
