git added clear and deleted search

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>Scripts on hand</h1>
         <form>
           <input type="text" class="input-search" onkeyup="searchScripts(this.value)"/>
-          <button type="submit">Search</button>
+          <button type="button" onclick="clearSearch()">Clear</button>
           <button type="button" class="align-right" onclick="openNewScript()">Add</button>
         </form>
       </div>
